# factory-public-test

./: .gitignore  README.md  pyproject.toml
src/factory_public_test/: __init__.py  management.py  tasks.py  webapp.py
src/factory_public_test/static/: app.js  index.html  styles.css
tests/: test_management.py  test_tasks.py
