[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "factory-public-test"
version = "0.1.0"
description = "A tiny public repository for testing Factory workflows."
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

